--- a/styling-react/src/SassComponent.scss
+++ b/styling-react/src/SassComponent.scss
@@ -1,14 +1,4 @@
-$red: #fa5252;
-$orange: #fd7e14;
-$yellow: #fcc419;
-$green: #40c057;
-$blue: #339af0;
-
-@mixin squre($size) {
-  $calulated: 32px * $size;
-  width: $calulated;
-  height: $calulated;
-}
+@import "./style/utils.scss";
 
 .SassComponent {
   display: flex;
@@ -37,8 +27,8 @@ $blue: #339af0;
       background: $blue;
       @include squre(5);
     }
+
     &:hover {
-      //마우스를 올렸을 때
       background: ivory;
     }
   }
