--- a/todo-app/src/components/TodoTemplate.scss
+++ b/todo-app/src/components/TodoTemplate.scss
@@ -3,7 +3,8 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 6rem;
-  border-radius: 4px;
+  border-radius: 6px;
+  overflow: hidden;
   .app-title {
     background: #22b8cf;
     color: white;
