--- a/todo-app/src/components/TodoListItem.scss
+++ b/todo-app/src/components/TodoListItem.scss
@@ -1,31 +1,24 @@
-.TodoListItem {
-  display: flex;
-  padding: 1rem;
-  align-items: center;
+.TodoListItem-virtualized {
   &:nth-child(even) {
     background: #f8f9fa;
   }
-  .checkboxWrapper {
-    display: flex;
+
+  // 엘리먼트 사이사이에 border top속성을 삽입해서 줄칸 만듦
+  & + & {
+    border-top: 1px solid #dee2e6;
+  }
+}
+
+.TodoListItem {
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+
+  .checkbox {
     flex: 1;
+    display: flex;
+    cursor: pointer;
     align-items: center;
-    .checkbox {
-      display: flex;
-      cursor: pointer;
-      align-items: center;
-    }
-    .text {
-      display: flex;
-      margin-left: 0.5rem;
-      &.checked {
-        color: #adb5bd;
-        text-decoration: line-through;
-      }
-    }
-    svg {
-      font-size: 1.5rem;
-    }
-    // class 상태 변화를 이용한 view 변경
     &.checked {
       svg {
         color: #22b8cf;
@@ -36,6 +29,14 @@
       }
     }
   }
+  svg {
+    font-size: 1.5rem;
+  }
+  .text {
+    flex: 1;
+    margin-left: 0.5rem;
+  }
+  // class 상태 변화를 이용한 view 변경
 
   .remove {
     display: flex;
@@ -46,9 +47,5 @@
     &:hover {
       color: #ff8787;
     }
-  }
-  // 엘리먼트 사이사이에 border top속성을 삽입해서 줄칸 만듦
-  & + & {
-    border-top: 1px solid #dee2e6;
   }
 }
