--- a/news-viewer/src/Category.scss
+++ b/news-viewer/src/Category.scss
@@ -13,6 +13,8 @@
   }
   .category {
     margin-right: 0.5rem;
+    color: black;
+    text-decoration: none;
     &:hover {
       color: rosybrown;
     }
